--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -234,7 +234,7 @@ textarea{
     right: 0;
     font-size: 100px;
     font-weight: bold;
-    color: #ff8800;
+    color: #0b3a45;
 }
 .video video{
     width: 100%;
@@ -277,8 +277,9 @@ textarea{
 .information{
     width: 60%;
     padding: 15px 15px;
-    background-color: #14b8a6;
+    /* background-color: #14b8a6; */
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    border: 1px solid #000;
 }
 .information h1{
     padding: 0;
@@ -294,12 +295,19 @@ textarea{
 .our-values{
     width: 100vw;
     padding: 12px 0;
-    background-color: #000000;
     margin-top: 30px;
      text-align: center;
      display: flex;
      align-items: center;
      justify-content: center;
+     flex-direction: column;
+     text-align: right;
+     position: relative;
+
+}
+.our-values h1{
+    font-size: 30px;
+    font-weight: bold;
 }
 .values {
     width: 70%;
@@ -312,17 +320,137 @@ textarea{
     display: flex;
 }
 .picture{
-    width: 30%;
-    height: 100%;
-    background-color: aqua;
+    width: 10%;
+    border-bottom: 1px solid #000;
 }
-.picturre img{
-    width: 50%;
-    height: 50%;
+.picture img{
+    width: 100px;
     object-fit: cover ;
+    margin-top: 20px;
+    margin-right: 30px;
 }
 .text{
-    width: 70%;
+    width: 90%;
     padding: 12px 0;
     background-color: #fff;
+    border-bottom: 1px solid #000;
 }
+.text h1{
+    text-align:left;
+    padding: 0 10px;
+}
+.text p{
+    text-align: left;
+    padding: 0 10px;
+    font-size: 20px;
+}
+h2{
+    margin: auto;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 30px;
+    color: #0a2f38;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+.ceo-massage{
+    width: 100vw;
+    padding: 12px 0;
+}
+.massage-and-picture{
+    width: 70%;
+    padding: 12px 0;
+    margin: auto;
+    display: flex;
+    gap: 1%;
+}
+.massage{
+    width: 70%;
+    border: 1px solid #000;
+    border-radius: 6px;
+    background-color: #0b3a45;
+     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+.massage h1{
+    padding: 10px;
+    margin: 0;
+    color: #fff;
+    text-align: left;
+}
+.massage p{
+    padding: 0 10px;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: justify;
+    color: #fff;
+    line-height: 40px;
+}
+.ceo-picture{
+    width: 29%;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.ceo-picture img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.massage-2{
+    width: 70%;
+    margin: auto;
+    text-align: justify;
+}
+.massage-2 p{
+    font-size: 20px;
+    color: #0a2f38;
+    font-weight: 300;
+}
+h3{
+    font-size: 30px;
+    color: #0a2f38;
+    text-align: center;
+}
+.overview{
+    width: 70%;
+    padding: 12px 0;
+    margin: auto;
+    display: flex;
+    gap: 1%;
+}
+.overview-massage{
+    width: 70%;
+    background-color: #0a2f38;
+    border-radius: 6px;
+    border: 1px solid #000;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+.overview-massage h1{
+    color: #fff;
+    font-size: 30px;
+    text-align: left;
+    padding: 0 12px;
+}
+.overview-massage p{
+    font-size: 20px;
+    font-weight: 300;
+    text-align: justify;
+    padding: 0 10px;
+    color: #fff;
+    line-height: 40px;
+}
+.overview-video{
+    width: 29%;
+    background-color: #ff7300;
+    border-radius: 6px;
+}
+.overview-video video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+    border: 1px solid #000;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+} 
