--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -10,6 +10,13 @@
 
 }
 
+.main-navigation .main-menu .menu-item-has-children > a {
+    pointer-events: none;
+    cursor: default;
+}
+
+
+
 .site-header {
     width: 100vw;
     background: linear-gradient(90deg, #0b3a45, #0a2f38);
@@ -49,7 +56,7 @@
 
 .main-navigation .main-menu {
     display: flex;
-    gap: 65px;
+    gap: 40px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -1491,7 +1498,139 @@ footer {
   max-width: 100%;
   height: auto;
 }
+.page-benner {
+  height: 600px;
+  background: url("http://jubha-hospital.test/wp-content/uploads/2026/01/In-Patient-1-1.jpg") center/cover no-repeat;
+  position: relative;
 
+}
+
+.in-patient {
+    display: flex;
+    min-height: 70vh;
+    width: 1500px;
+    margin: auto;
+    background-color: #ffffff;
+}
+
+
+.sidebar {
+    width: 280px;
+    padding: 30px 25px;
+    background-color: #f8f9fa;
+    border-right: 1px solid #e0e0e0;
+}
+
+.sidebar-title {
+    font-size: 15px;
+    font-weight: 700;
+    color: #007c8c;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+}
+
+
+.menu {
+    list-style: none;
+}
+
+.menu li {
+    margin-bottom: 16px;
+}
+
+.menu li a {
+    text-decoration: none;
+    color: #6c757d;
+    font-size: 14px;
+    line-height: 1.5;
+    transition: all 0.3s ease;
+}
+
+.menu li a:hover {
+    color: #007c8c;
+}
+
+
+.menu li.active a {
+    color: #007c8c;
+    font-weight: 600;
+    padding-left: 10px;
+    border-left: 3px solid #007c8c;
+}
+
+
+.content {
+    flex: 1;
+    padding: 50px;
+    display: flex;
+    gap: 40px;
+    align-items: flex-start;
+}
+
+
+.content-text {
+    flex: 1;
+}
+
+.content-text h1 {
+    font-size: 32px;
+    color: #007c8c;
+    margin-bottom: 20px;
+}
+
+.content-text p {
+    font-size: 15px;
+    color: #444;
+    line-height: 1.8;
+    margin-bottom: 15px;
+}
+
+
+.content-image {
+    flex: 1;
+}
+
+.content-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.contant-image {
+    flex: 1;
+}
+
+.contant-image img {
+    width: 100%;
+    height: auto;
+    margin-top: 190PX;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.contint-image {
+    flex: 1;
+}
+
+.contint-image img {
+    margin-left: 90px;
+    height: auto;
+    margin-top: 190PX;
+    border-radius: 8px;
+    object-fit: cover;
+}
+
+.page-banner {
+  height: 600px;
+  background: url("http://jubha-hospital.test/wp-content/uploads/2026/01/vi.jpg") center/cover no-repeat;
+  position: relative;
+
+}
+.page-bnner {
+  height: 600px;
+  background: url("http://jubha-hospital.test/wp-content/uploads/2026/01/kkkkk.jpg") center/cover no-repeat;
+  position: relative;
+
+}
 
 
                                                                                     
