--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -724,7 +724,7 @@ footer {
     /* background-color: #14b8a6; */
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border: 1px solid #000;
-
+}
 .icon {
     font-size: 2.5rem;
     opacity: 0.7;
@@ -1496,11 +1496,48 @@ footer {
   max-width: 100%;
   height: auto;
 }
+.amc-hazsa{
+  width: 100vw;
+}
+.hazsa{
+  width: 100vw;
+}
+.hazsa img{
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+.auto{
+  width: 100vw;
+  padding: 12px 0;
+  background-color: #0aa6a6;
+}
+.auto-card{
+  width: 90vw;
+  padding: 12px 0;
+  background-color: #ffffff;
+  margin: auto;
+}
+.auto-card img{
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+.auto-wrapper {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+}
 
+.auto {
+    min-width: 100%;
+    transition: transform 0.5s ease-in-out;
+}
 
-
-                                                                                    
-
+.auto-card img {
+    width: 100%;
+    display: block;
+}
 
 
 
