--- a/wp-content/themes/my-ecommerce-theme/style.css
+++ b/wp-content/themes/my-ecommerce-theme/style.css
@@ -1530,7 +1530,6 @@ h3{
 }
 .auto-card{
   width: 90vw;
-
   background-color: #ffffff;
   margin: auto;
 }
@@ -2308,23 +2307,23 @@ h1, h2, h3 {
 
 .auto-track {
   display: flex;
-  gap: 24px;
   transition: transform 0.6s ease;
 }
 
 /* Card */
-.auto-card {
-  width: 605px;
-  height: 260px;
+.auto-card1 {
+  width: 500px;
+  height: 300px;
   position: relative;
   border-radius: 10px;
   overflow: hidden;
   flex-shrink: 0;
   cursor: pointer;
+  margin: auto;
 }
 
 /* Image */
-.auto-card img {
+.auto-card1 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -2332,7 +2331,7 @@ h1, h2, h3 {
 }
 
 /* Dark overlay */
-.auto-card::after {
+.auto-card1::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -2360,22 +2359,22 @@ h1, h2, h3 {
 }
 
 /* Hover effects */
-.auto-card:hover img {
+.auto-card1:hover img {
   transform: scale(1.08);
 }
 
-.auto-card:hover::after {
+.auto-card1:hover::after {
   opacity: 1;
 }
 
-.auto-card:hover .card-title {
+.auto-card1:hover .card-title {
   opacity: 1;
   transform: translateY(-4px);
 }
 
 /* Responsive */
 @media (max-width: 768px) {
-  .auto-card {
+  .auto-card1 {
     width: 320px;
     height: 200px;
   }
